# rtensorflow

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  NEWS.md  README.md  cleanup  configure  configure.ac  cran-comments.md
R/: RcppExports.R  examples.R  feed_forward_network.R  hello.R  r_api.R
man/: Add.Rd  Constant.Rd  Cos.Rd  Equal.Rd  MatMul.Rd  Neg.Rd  Placeholder.Rd  Pow.Rd  Relu.Rd  Sigmoid.Rd  Softmax.Rd  Tanh.Rd  Variable.Rd  add_graph.Rd  build_run_graph.Rd  c_initializeSessionVariables.Rd  c_loadGraphFromFile.Rd  c_loadSavedModel.Rd  c_runSession.Rd  catchError.Rd  checkError.Rd  check_mnist.Rd  deleteSessionVariables.Rd  feedInput.Rd  fetchOutput.Rd  generateUniqueName.Rd  getBinaryOp.Rd  getConstant.Rd  getErrorMessage.Rd  getNodeList.Rd  getOpDetails.Rd  getOpProperties.Rd  getOutput.Rd  getPlaceholder.Rd  getSourceOp.Rd  getUnaryOp.Rd  import_run_graph.Rd  initializeSessionVariables.Rd  loadGraphFromFile.Rd  loadSavedModel.Rd  (+9 more)
src/: Makevars  Makevars.in  RcppExports.cpp  build_run_ff_graph.cpp  export_util_functions.cpp  feed_forward.cpp  hello.cpp  import_run_ff_graph.cpp  neural_network.cpp  utils.cpp  utils.h
tests/: mnist.R  mnist.py  regress.py  testthat.R
tests/models/: feed_forward_graph.pb
tests/saved-graphs/: feed_forward_graph.pb
tests/saved-models/saved-regression-model/: saved_model.pb
tests/saved-models/saved-regression-model/variables/: variables.index  (+1 more)
tests/testthat/: test_build_run_graph.R  test_feed_forward.R  test_hello.R  test_import_run_graph.R  test_neural_net.R  test_unique_name.R
vignettes/: introduction.Rmd
